@@ -1,4 +1,4 @@
-# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v5.037.
+# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.009.
 use strict;
 use warnings;
 
@@ -13,7 +13,6 @@ my %WriteMakefileArgs = (
     "ExtUtils::MakeMaker" => 0
   },
   "DISTNAME" => "CPAN-Changes-Group-Dependencies-Details",
-  "EXE_FILES" => [],
   "LICENSE" => "perl",
   "MIN_PERL_VERSION" => "5.006",
   "NAME" => "CPAN::Changes::Group::Dependencies::Details",
@@ -36,7 +35,7 @@ my %WriteMakefileArgs = (
     "File::Spec" => 0,
     "Scalar::Util" => 0,
     "Test::Differences" => 0,
-    "Test::More" => "0.89",
+    "Test::More" => 0,
     "if" => 0
   },
   "VERSION" => "0.001006",
@@ -59,7 +58,7 @@ my %FallbackPrereqs = (
   "MooX::Lsub" => 0,
   "Scalar::Util" => 0,
   "Test::Differences" => 0,
-  "Test::More" => "0.89",
+  "Test::More" => 0,
   "charnames" => 0,
   "constant" => 0,
   "if" => 0,
